feat: create box shadow

--- a/style.css
+++ b/style.css
@@ -80,12 +80,13 @@
     left: 20%;
     border-radius: 1rem;
     backdrop-filter: blur(2rem);
+    box-shadow: -5rem 5rem 5rem rgba(32, 32, 32, 0.4);
 }
 .newLogin {
     width: 30%;
     height: 80%;
     display: flex;
-    background-image: linear-gradient(to bottom, rgb(194, 183, 183), rgb(228, 3, 3, 0.0));
+    background-image: linear-gradient(to bottom, rgb(235, 225, 225), rgb(228, 3, 3, 0.0));
     border-top-left-radius: 1rem;
     flex-flow: column;
     align-items: flex-start;
