--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    color: var(--textColor);
 }
 :root{
     --backgroundColor: #edf3f3;
@@ -80,7 +81,7 @@
     left: 20%;
     border-radius: 1rem;
     backdrop-filter: blur(2rem);
-    box-shadow: -5rem 5rem 5rem rgba(32, 32, 32, 0.4);
+    box-shadow: -5rem 5rem 5rem rgba(32, 32, 32, 0.6);
 }
 .newLogin {
     width: 30%;
@@ -90,7 +91,7 @@
     border-top-left-radius: 1rem;
     flex-flow: column;
     align-items: flex-start;
-    padding: 1rem;
+    padding: 3rem;
 }
 .loginContainer{
     width: 70%;
@@ -98,4 +99,19 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
+}
+.createAcountButton{
+    color: var(--textColor);
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    border-radius: 2px;
+    border-radius: 1rem;
+    font-size: 1rem;
+}
+.mediasContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
 }
