--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     color: var(--textColor);
+    font-family: 'Roboto', sans-serif;
 }
 :root{
     --backgroundColor: #edf3f3;
@@ -71,27 +72,42 @@
     background-image: linear-gradient(to bottom, rgb(248, 4, 126), rgb(228, 3, 3));
     margin-left: 6rem;
 }
+.granuladoTexture {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0.5;
+}
 .floatingWelcome {
     width: 60%;
     height: 70vh;
-    background-color: rgba(194, 183, 183, 0.3);
+    background-color: rgba(160, 101, 175, 0.3);
     position: fixed;
     display: flex;
     align-self: center;
     left: 20%;
     border-radius: 1rem;
     backdrop-filter: blur(2rem);
-    box-shadow: -5rem 5rem 5rem rgba(32, 32, 32, 0.6);
+    box-shadow: -5rem 5rem 5rem rgba(44, 41, 41, 0.6);
 }
 .newLogin {
     width: 30%;
     height: 80%;
     display: flex;
-    background-image: linear-gradient(to bottom, rgb(235, 225, 225), rgb(228, 3, 3, 0.0));
+    background-image: linear-gradient(to bottom, rgb(235, 225, 225, 0.5), rgb(228, 3, 3, 0.0));
     border-top-left-radius: 1rem;
     flex-flow: column;
     align-items: flex-start;
     padding: 3rem;
+}
+.welcomeTitle{
+    font-size: 2rem;
+    font-weight: lighter;
+    margin-bottom: 1rem;
+}
+.createAccountTitle{
+    font-size: 3rem;
+    font-weight: bold;
 }
 .loginContainer{
     width: 70%;
@@ -109,9 +125,69 @@
     border-radius: 1rem;
     font-size: 1rem;
 }
+.logarButton{
+    width: 30%;
+    display: flex;
+    align-self: flex-end;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5rem;
+    margin-top: 3rem;
+    height: 3rem;
+    border-radius: 3rem;
+    border: none;
+}
 .mediasContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.loginContainer{
+    height: 90%;
+}
+.useremailContainer{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+.userEmail{
+    width: 25rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 1rem;
+    box-shadow: 0.5rem -0.5rem 1rem rgba(0, 0, 0, 0.5);
+    border-radius: 2rem;
+}
+.input-1{
+    width: 8rem;
+    background-color: transparent;
+    border: none;
+    margin-right: 30%;
+}
+.input-2{
+    width: 8rem;
+    background-color: transparent;
+    border: none;
+    margin-right: 2rem;
+}
+.userIcon{
+    height: 80%;
+    width: auto;
+    margin-left: 1rem;
+}
+.invisibilityIcon{
+    height: 80%;
+    width: auto;
+    margin-right: 1rem;
+}
+.verticalLine{
+    width: 0.3rem;
+    height: 80%;
+    background-color: var(--textColor);
+    margin-right: 3rem;
+}
+.otherMedias{
     margin-top: 2rem;
 }
