--- a/style.css
+++ b/style.css
@@ -117,13 +117,14 @@
     align-items: center;
 }
 .createAcountButton{
-    color: var(--textColor);
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 1rem;
-    border-radius: 2px;
-    border-radius: 1rem;
+    border-radius: 3rem;
     font-size: 1rem;
+    border: none;
+    height: 3rem;
+    width: 80%;
 }
 .logarButton{
     width: 30%;
@@ -135,6 +136,7 @@
     margin-top: 3rem;
     height: 3rem;
     border-radius: 3rem;
+    background-image: linear-gradient(to right, rgb(235, 225, 225, 0.5), rgb(235, 225, 225, 0.0));
     border: none;
 }
 .mediasContainer {
