--- a/style.css
+++ b/style.css
@@ -91,12 +91,12 @@
     box-shadow: -5rem 5rem 5rem rgba(44, 41, 41, 0.6);
 }
 .circleWithArrowsContainer{
-    width: 6rem;
-    height: 6rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 100%;
     background-color: #edf3f3;
     position: absolute;
-    left: 31%;
+    left: 32%;
     top: 45%;
     display: flex;
     flex-direction: column;
@@ -110,6 +110,13 @@
 }
 .arrow2{
     transform: rotate(180deg);
+}
+.createAccount{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
 }
 .newLogin{
     width: 30%;
@@ -127,9 +134,6 @@
     font-weight: lighter;
     margin-top: 0;
     align-self: flex-start;
-}
-.createAccount{
-    margin-bottom: 10rem;
 }
 .createAccountTitle{
     font-size: 3rem;
@@ -151,8 +155,6 @@
     border: none;
     height: 3rem;
     width: 80%;
-    align-self: center;
-    justify-self: center;
 }
 .logarButton{
     width: 30%;
@@ -173,12 +175,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1.5rem;
+    margin: 0.5rem;
     border-radius: 100%;
     background-color: var(--backgroundColor);
 }
 .loginTitle{
-    font-size: 4rem;
+    font-size: 3rem;
+    margin: 3rem;
 }
 .contactMedia{
     width: 2rem;
@@ -201,8 +204,8 @@
 }
 .mediasContainer{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 70%;
+    align-items: flex-start;
 }
 .loginContainer{
     height: 90%;
@@ -214,7 +217,7 @@
 }
 .userEmail{
     width: 25rem;
-    height: 4rem;
+    height: 3rem;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -262,7 +265,7 @@
     height: 1rem;
 }
 .otherMediasContainer{
-    margin-top: 2rem;
+    margin-top: 0.3rem;
     display: flex;
     flex-direction: row;
 }
@@ -272,7 +275,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1rem;
+    margin: 0.3rem;
 }
 .media-unity{
     width: 100%;
